--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ node_modules
 *.tmp
 *.cmd
 .svn
+source/widget/perfect-information/perfect-information.css
+source/widget/glory/glory.css
+source/widget/courses/courses.css
