更新配置文件，需要重新生成下临时文件

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ node_modules
 source/widget/perfect-information/perfect-information.css
 source/widget/glory/glory.css
 source/widget/courses/courses.css
+source/fis-conf-pages.js
