--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,5 @@ source/widget/perfect-information/perfect-information.css
 source/widget/glory/glory.css
 source/widget/courses/courses.css
 source/fis-conf-pages.js
+/config
 *.css
