--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,20 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+/website/
+/source/fis-conf-pages.js
+/source/pages/
+/source/widget/_homework/
+/source/widget/errorQuestion/
+/source/widget/courseStudycenter/
+/source/widget/footer/
+/source/widget/filter/
+/source/widget/find-teacher/
+/source/widget/fresh/
+/source/widget/glory/
+/source/widget/gold/
+/source/widget/header/
+/source/widget/live/
+/source/widget/notice/
+/source/widget/courses/
+/source/lib/foundation/
