--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,6 @@ pip-log.txt
 /.idea/workspace.xml
 /website/*
 *.css
+source/conf/deploy-home.bat
+source/conf/deploy-mall.bat
+source/conf/deploy-account.bat
