--- a/.gitignore
+++ b/.gitignore
@@ -222,4 +222,5 @@ pip-log.txt
 *.css
 source/conf/deploy-home.bat
 source/conf/deploy-mall.bat
-source/conf/deploy-home.bat
+source/conf/deploy-account.bat
+
