--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,5 @@ source/conf/deploy-account.bat
 source/conf/deploy-account.bat
 /source/widget/Module.Pagination/backup/
 /source/widget/Module.Paginator/
+
+.idea
