--- a/.gitignore
+++ b/.gitignore
@@ -232,3 +232,14 @@ source/conf/deploy-account.bat
 /source/widget/Module.Paginator/
 
 .idea
+source/lib/Font-Awesome/4.4.0/css/font-awesome.css
+source/lib/Font-Awesome/4.4.0/css/font-awesome.min.css
+source/lib/Font-Awesome/4.4.0/fonts/fontawesome-webfont.eot
+source/lib/Font-Awesome/4.4.0/css/font-awesome.css
+source/lib/Font-Awesome/4.4.0/fonts/fontawesome-webfont.svg
+source/lib/Font-Awesome/4.4.0/fonts/fontawesome-webfont.ttf
+source/lib/Font-Awesome/4.4.0/fonts/fontawesome-webfont.ttf
+source/lib/Font-Awesome/4.4.0/fonts/fontawesome-webfont.ttf
+source/lib/Font-Awesome/4.4.0/fonts/fontawesome-webfont.woff
+source/lib/Font-Awesome/4.4.0/fonts/fontawesome-webfont.eot
+source/lib/Font-Awesome/4.4.0/fonts/fontawesome-webfont.svg
